--- a/Pra_Singh_MyFavouriteSports/src/app/app.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/app.component.html
@@ -7,4 +7,5 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<app-content-card></app-content-card>
+<app-content-list *ngFor="let item of contentArray.slice(0, 5); index as i; first as isFirst" [content]="item" [class.is-first]="isFirst">
+</app-content-list>
