--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
@@ -13,10 +13,13 @@
    
 }
 
-.first-of-type{
+#content-card.first-of-type{
     border: 2px solid black;
   
 }
-contentItem:Content{
+/* .content{
     border: 2px solid black;
-}
+} */
+/* contentItem:Content{
+    border: 2px solid black;
+} */ 
