--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
@@ -17,6 +17,12 @@
     border: 2px solid black;
   
 }
+.border__card {
+    border: 2px solid black !important;
+  }
+  Content.id{
+    border: 2px solid black;
+  }
 /* .content{
     border: 2px solid black;
 } */
