--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
@@ -12,17 +12,22 @@
     width: 50%;
    
 }
-
-#content-card.first-of-type{
+.First {
+    border: 2px solid #4c4c4c;
+  }
+  .array-item:first-child {
+    border: 2px solid black;
+  }
+/* #content-card.first-of-type{
     border: 2px solid black;
   
-}
-.border__card {
+} */
+/* .border__card {
     border: 2px solid black !important;
-  }
-  Content.id{
+  } */
+  /* Content.id{
     border: 2px solid black;
-  }
+  } */
 /* .content{
     border: 2px solid black;
 } */
