--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
@@ -12,12 +12,15 @@
     width: 50%;
    
 }
-.First {
-    border: 2px solid #4c4c4c;
+.is-first {
+    border: 20px solid #000000;
   }
-  .array-item:first-child {
+  /* .array-item:first-child {
     border: 2px solid black;
-  }
+  } */
+  /* .card-container .id:first-of-type {
+    border: 2px solid black;
+  } */
 /* #content-card.first-of-type{
     border: 2px solid black;
   
