--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
@@ -1,11 +1,8 @@
-<div id="content-card">
+<div class="{{ content.type }}">
     <h4>{{ content.title }}</h4>
     <p>{{ content.description }}</p>
     <img class="image" src="{{ content.imgURL }}" (click)="imageText()"/><br>
     By:<em><strong>{{ content.creator }}</strong> </em>
-    <p>{{ content.type }}</p>
     <p>{{ content.tags }}</p>
-    <style>
-        
-    </style>
+    <p>Type: {{ content.type }}</p>
 </div>
