--- a/Pra_Singh_MyFavouriteSports/src/app/content-card/content-card.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-card/content-card.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8 mt-5">
-        <input [(ngModel)]="searchTerm" placeholder="Enter title">
+        <!-- <input [(ngModel)]="searchTerm" placeholder="Enter title"> -->
         <button (click)="search()">Search</button>
         <div *ngIf="message">
           <p [ngStyle]="{ color: messageColor }">{{ message }}</p>
