--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
@@ -1,8 +1,31 @@
-<div class="{{ content.type }}">
-    <h4>{{ content.title }}</h4>
-    <p>{{ content.description }}</p>
-    <img class="image" src="{{ content.imgURL }}" (click)="imageText()"/><br>
-    By:<em><strong>{{ content.creator }}</strong> </em>
-    <p>{{ content.tags }}</p>
-    <p>Type: {{ content.type }}</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8 mt-5">
+        <input [(ngModel)]="searchTerm" placeholder="Enter title">
+        <button (click)="search()">Search</button>
+        <div *ngIf="message">
+          <p [ngStyle]="{ color: messageColor }">{{ message }}</p>
+        </div>
+    </div> 
 </div>
+<div class="col-md-2"></div>
+</div>
+
+<div class="row">
+<h2 class="m-5">indoor</h2>
+<app-content-card class="col-md-4  mt-5 mx-1 card bg-success text-white" *ngFor="let item of contentArray | contentFilter:'indoor'; index as i; first as isFirst" [content]="item" [class.is-first]="isFirst"></app-content-card>
+</div>
+
+<div class="row">
+<h2 class="m-5">outdoor</h2>
+<app-content-card class="col-md-4  mt-5 mx-1 card bg-dark text-light" *ngFor="let item of contentArray | contentFilter:'outdoor'; index as i; first as isFirst" [content]="item" [class.is-first]="isFirst"></app-content-card>
+</div>
+
+<div class="row">
+<h2 class="m-5">outdoor and indoor</h2>
+<app-content-card class="col-md-4  mt-5 mx-1 card bg-primary text-dark" *ngFor="let item of contentArray | contentFilter:'outdoor and indoor'; index as i; first as isFirst" [content]="item" [class.is-first]="isFirst"></app-content-card>
+</div>
+
+
+
