--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
@@ -1,3 +1,5 @@
+<app-create-content (contentCreated)="addNewContent($event)"></app-create-content>
+
 <div class="container">
     <div class="row">
       <div class="col-md-2"></div>
