--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
@@ -1,4 +1,4 @@
-<app-create-content (contentCreated)="addNewContent($event)"></app-create-content>
+<app-create-content (addContentEvent)="addNewContent($event)"></app-create-content>
 
 <div class="container">
     <div class="row">
