--- a/Pra_Singh_MyFavouriteSports/src/app/app.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/app.component.html
@@ -7,4 +7,7 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<app-messages></app-messages>
+<input [(ngModel)]="idNum">
+<button (click)="getClickedSports(idNum)">Get Content Card</button>
 <app-content-list></app-content-list>
