--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.scss
@@ -37,3 +37,9 @@
 /* contentItem:Content{
     border: 2px solid black;
 } */ 
+
+div.shadow{
+  box-shadow: 10px 10px 5px 12px gray ;
+  width: 20%;
+  background-color: lightblue;
+}
