assignment without error and with bonus

--- a/Pra_Singh_MyFavouriteSports/src/app/app.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/app.component.html
@@ -8,6 +8,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-messages></app-messages>
-<input [(ngModel)]="idNum">
-<button (click)="getClickedSports(idNum)">Get Content Card</button>
+<input [(ngModel)]="playerId">
+<button (click)="getClickedSport(playerId)">Get Content Card</button>
 <app-content-list></app-content-list>
