--- a/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
+++ b/Pra_Singh_MyFavouriteSports/src/app/content-list/content-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let sports of sports" class="shadow">
+<div *ngFor="let sports of sport" class="shadow">
   <app-content-card [content]="sports"></app-content-card>
 </div>
 <div class="container">
